syntax = "proto3";

package dosei.cluster;

enum NodeType {
  PRIMARY = 0;
  REPLICA = 1;
}

message NodeInfo {
  string id = 1;
  NodeType enum = 2;
  string address = 3;
  string version = 4;
}
